# calibration

./: .gitignore  .gitignore~  .gitmodules  CMakeLists.txt.user.18  LICENSE  README.md
bagedit/: manifest.xml
bagedit/.hg/: dirstate  hgrc  undo.desc
bagedit/.hg/cache/: branchheads-served
bagedit/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
bagedit/nodes/: bagmerge.py
calibration/: CMakeLists.txt  CMakeLists.txt~  mystereocalib.yml  package.xml
calibration/PCDs/: ldmrs.pcd  lms1.pcd  lms2.pcd
calibration/PCDs/21-06-2016_13-04-47_25nogrid/: lms151_1_ldmrs_1_calib.txt
calibration/PCDs/21-06-2016_14-35-47_15grid/: pointgrey_1_PnP.pcd
calibration/PCDs/nogrid_solvepnp_+-/: singleCamCloudPnP.pcd
calibration/PCDs/thesis_visual_example_31-05-2016_02-56-34/: lms151_1_lms151_2_calib.txt  lms151_1_pointgrey_1_solvePnPRansac_calib.txt  lms151_2.pcd  pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration/PCDs/thesis_visualization_18-06-2016_20-39-38/: ldmrs_1.pcd  lms151_1.pcd  lms151_1_ldmrs_1_calib.txt  lms151_1_lms151_2_calib.txt
calibration/STL/: ford_escort_atlascar1.stl
calibration/calib_results/07-04-2016_16-49-47/: ldmrs.pcd  lms1.pcd  lms1_camera_calib.txt  lms1_camera_calib_solvePnP.txt  lms1_ldmrs_calib.txt  lms1_lms2_calib.txt  lms2.pcd  singleCamCloud.pcd  singleCamCloudPnP.pcd  singleCam_obj_img_points.txt
calibration/calib_results/07-04-2016_17-03-07/: ldmrs.pcd  lms1.pcd  lms1_camera_calib.txt  lms1_camera_calib_solvePnP.txt  lms1_ldmrs_calib.txt  lms1_lms2_calib.txt  lms2.pcd  singleCamCloud.pcd  singleCamCloudPnP.pcd  singleCam_obj_img_points.txt
calibration/calib_results/08-04-2016_14-09-30/: ldmrs.pcd  lms1.pcd  lms2.pcd  singleCamCloud.pcd  singleCamCloudPnP.pcd  singleCam_obj_img_points.txt
calibration/calib_results/08-04-2016_14-32-18/: ldmrs.pcd  lms1.pcd  lms2.pcd  singleCamCloud.pcd  singleCamCloudPnP.pcd  singleCam_obj_img_points.txt
calibration/calib_results/08-04-2016_14-40-23/: ldmrs.pcd  lms1.pcd  lms1_camera_calib.txt  lms1_camera_calib_solvePnP.txt  lms1_ldmrs_calib.txt  lms1_lms2_calib.txt  lms2.pcd  singleCamCloud.pcd  singleCamCloudPnP.pcd  singleCam_obj_img_points.txt
calibration/calib_results/08-04-2016_14-51-29/: ldmrs.pcd  lms1.pcd  lms1_camera_calib.txt  lms1_camera_calib_solvePnP.txt  lms1_ldmrs_calib.txt  lms1_lms2_calib.txt  lms2.pcd  singleCamCloud.pcd  singleCamCloudPnP.pcd  singleCam_obj_img_points.txt
calibration/calib_results/12-04-2016_09-40-15/: lms1.pcd  lms1_camera_calib.txt  lms2.pcd
calibration/calib_results/12-04-2016_09-58-37/: ldmrs.pcd  lms1.pcd  lms1_lms2_calib.txt  singleCamCloud.pcd
calibration/calib_results/12-04-2016_10-33-38/: lms1_camera_calib.txt  lms1_lms2_calib.txt  lms2.pcd  singleCamCloud.pcd  solvePnPRansac_lms1_camera_calib.txt
calibration/calib_results/12-04-2016_11-21-49/: lms1.pcd  lms1_camera_calib.txt  lms1_ldmrs_calib.txt  (+4 more)
calibration/calibration/: CMakeLists.txt  mainpage.dox
calibration/doc/: manifest.yaml
calibration/launch/: lasers.launch
calibration/src/: calibration.cpp  calibration.cpp~  calibration_from_files.cpp  sick_ldmrs.cpp  sick_lms151_1.cpp  sick_lms151_2.cpp  single_camera_calib.cpp  single_camera_test.cpp  swissranger.cpp  visualization_rviz_lms2.cpp
calibration_gui/PCDs/: lms2.pcd
calibration_gui/calib_results/: README.md
calibration_gui/calibration_gui/: CMakeLists.txt  CMakeLists.txt~  gui.pro  gui.pro.user.18  gui.pro.user.3.2-pre1  gui.pro.user.9f75244  gui.pro.user.fb9c6f8  package.xml  package.xml~
csiro-asl-ros-pkg/: rosdep.yaml  stack.xml
csiro-asl-ros-pkg/mdl_slm/: README  mainpage.dox  manifest.xml
csiro-asl-ros-pkg/sick_ldmrs/: CMakeLists.txt  mainpage.dox  package.xml  rosdoc.yaml  setup.py
csiro-asl-ros-pkg/sick_ldmrs/cfg/: ldmrs.cfg
csiro-asl-ros-pkg/sick_ldmrs/nodes/: sickldmrs.py  sickldmrs.py~
csiro-asl-ros-pkg/sick_ldmrs/src/sick_ldmrs/: dataproc.py  exceptions.py  ldmrsmsgs.py  params.py  utils.py  xport.py
csiro-asl-ros-pkg/sick_ldmrs/test/: ldmrs.test  test_dynreconfig.py  test_init.py  test_msg.ldmrs  test_msg.py  test_utils.py  test_xport.py  testhelpers.py
csiro-asl-ros-pkg/small/: Makefile  mainpage.dox  manifest.xml
lidar_cam_calibration/calibration/: package.xml
lidar_cam_calibration/launch/: lasers.launch~
lidar_segmentation/: CMakeLists.txt  mainpage.dox  package.xml
lidar_segmentation/Matlab_tools/: count_clusters.m  euclideanDistance.m  metricA.m  metricB.m  metric_compare.m  plot_metric_results.m  plots_MetricA.m  plots_MetricB.m
lidar_segmentation/src/: clustering.cpp  clustering.cpp~  groundtruth.cpp  main.cpp  main.cpp~  visualization_rviz.cpp
multisensor_aquisition/: CMakeLists.txt  package.xml  stereo_parameters.yaml
multisensor_aquisition/launch/: bag.launch  bag.launch.mine  bag.launch.r314  bag.launch.r490  camera_info.launch  frames.launch  lasers.launch  save_frames.launch  stereo_processing.launch  xb3.launch
multisensor_aquisition/src/: camera_info_republisher.cpp  frame_broadcaster.cpp  points_to_camera.cpp  save_frames.cpp  stereo.cpp
multisensor_fusion/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
multisensor_fusion/intrinsic_calibrations/: ros_calib.yaml  ros_calib.yaml~
multisensor_fusion/launch/: atlascar_fusion.launch  atlascar_fusion.rviz  kinect_atlascar.launch  lms1_kinect_pg_fusion.launch  lms1_kinect_pg_fusion.rviz  lms1_lms2_mrs_pg_kinect_fusion.launch  lms1_lms2_mrs_pg_kinect_fusion.rviz
multisensor_fusion/src/: atlascar_fusion.cpp  lms1_kinect_pg_fusion.cpp  lms1_lms2_mrs_pg_kinect.cpp  lms1_lms2_mrs_pg_kinect_fusion.cpp  multisensor_fusion_class.cpp
pointgrey_fl3_ge_28s4_c/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pointgrey_fl3_ge_28s4_c/src/: pointgrey_fl3-ge-28s4-c_driver.cpp
swissranger_camera-master/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
swissranger_camera-master/cfg/: SwissRanger.cfg
swissranger_camera-master/include/: sr.h
swissranger_camera-master/launch/: sr_eth.launch
swissranger_camera-master/src/: depth_view.cpp  dev_sr.cpp  intrinsics_params_extractor.cpp  sr.cpp
(+887 files in other folders)
