<package>
  <name>sick_ldmrs</name>
  <version>1.0.0</version>
  <description>Driver node for Sick LD-MRS</description>
  <maintainer email="invalid@noreply.org">Brett Grandbois</maintainer>
  <maintainer email="invalid@noreply.org">Fred Pauling</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/sick_ldmrs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Brett Grandbois</author>
  <author>Fred Pauling</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>rostest</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>driver_base</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>